--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,25 +2,118 @@
     "bienvenido": "Welcome back!",
     "heOlvidadoContraseña": "I forgot my password",
     "eresNuevoAqui": "Are you new here?",
-    "mensajeDeBienvenida": "Welcome to our budgeting and financial health app! Here you can keep track of your finances and improve your financial situation. Sign up now and start achieving your financial goals!",
-    "registrarse": "Sign up!",
+    "mensajeDeBienvenida": "Welcome to our budget and financial health application! Here you can keep track of your finances and improve your economic situation. Register now and start achieving your financial goals!",
+    "registrarse": "Register!",
     "password": "password",
     "registro": "Registration",
-    "introduceLosSiguientesDatos": "Enter the following information",
-    "elNombreEsObligatorio": "Name is required.",
-    "elCorreoElectronicoEsObligatorio": "Email is required.",
-    "elCorreoElectronicoNoEsValido": "Email is not valid.",
-    "laContraseñaEsObligatoria": "Password is required.",
-    "laContraseñaDebeTenerAlMenos8Caracteres": "Password must be at least 8 characters.",
-    "laContraseñaDebeContenerAlMenosMayusculaYMinuscula": "Password must contain at least one uppercase and one lowercase letter.",
-    "confirmacionContraseñaObligatoria": "Password confirmation is required.",
+    "introduceLosSiguientesDatos": "Enter the following data",
+    "elNombreEsObligatorio": "The name is mandatory.",
+    "elCorreoElectronicoEsObligatorio": "The email is mandatory.",
+    "elCorreoElectronicoNoEsValido": "The email is not valid.",
+    "laContraseñaEsObligatoria": "The password is mandatory.",
+    "laContraseñaDebeTenerAlMenos8Caracteres": "The password must have at least 8 characters.",
+    "laContraseñaDebeContenerAlMenosMayusculaYMinuscula": "The password must contain at least one uppercase and one lowercase letter.",
+    "confirmacionContraseñaObligatoria": "Password confirmation is mandatory.",
     "contraseñasNoCoinciden": "Passwords do not match.",
-    "añoNacimientoObligatorio": "Year of birth is required.",
-    "elAñoDebeSerValido": "Year of birth must be a valid year.",
+    "añoNacimientoObligatorio": "The birth year is mandatory.",
+    "elAñoDebeSerValido": "The birth year must be a valid year.",
     "crearCuenta": "Create account",
     "nombre": "Name",
     "correoElectronico": "Email",
     "contraseña": "Password",
     "confirmarContraseña": "Confirm password",
-    "añoNacimiento": "Year of birth"
-    }
+    "añoNacimiento": "Birth year",
+    "descripcion": "Description",
+    "crearNuevoTablero": "Create new board",
+    "crearNuevaCategoria": "Create new category",
+    "elNombreTieneComoMaximo": "The name must have a maximum of 50 characters",
+    "porcentajeAhorroObligatotorio": "The savings percentage is mandatory",
+    "porcentajeMayorOIgual": "The savings percentage must be greater than or equal to 0",
+    "porcentajeMenorOIgual": "The savings percentage must be less than or equal to 100",
+    "porcentajeAhorro": "Savings percentage",
+    "descripcionMaximoCaracteres": "The description must have a maximum of 250 characters",
+    "createBoard": "Create board",
+    "createCategory": "Add category",
+    "confirmar": "Confirm",
+    "editarTablero": "Edit board",
+    "editarCategoria": "Edit category",
+    "entrar": "Enter",
+    "misTableros": "Mis plantillas",
+    "seHaCreadoCorrectamenteTablero": "The board has been created correctly",
+    "seHaCreadoCorrectamenteCategoria": "The category has been created correctly",
+    "seHaCreadoCorrectamenteEntrada": "The entry has been created correctly",
+    "seHaActualizadoCorrectamenteEntrada": "The entry has been correctly updated",
+    "seHaProducidoUnError": "An error has occurred. Try again later",
+    "cargando": "loading",
+    "quincePorCiento": "15%",
+    "cerrar": "Close",
+    "guardar": "Save",
+    "seguroQueDeseasEliminarBoard": "Are you sure you want to delete the selected",
+    "seguroQueDeseasEliminarCategoria": "Are you sure you want to delete the selected category?",
+    "seHaEliminadoCorrectamente": "The board has been deleted correctly",
+    "seguroQueDeseasEliminarLaEntrada": "Are you sure you want to delete the selected entry?",
+    "seHaEliminadoCorrectamenteCategoria": "The category has been correctly deleted",
+    "seHaEliminadoCorrectamenteEntrada": "The entry has been deleted correctly",
+    "seHaActualizadoCategoriaCorrectamente": "The category has been updated correctly",
+    "buscar": "Search",
+    "buscarNav": "Search...",
+    "importe": "Amount",
+    "tipo": "Type",
+    "fijo": "Fixed",
+    "variable": "Variable",
+    "etiquetas": "Tags",
+    "importancia": "Importance",
+    "periodo": "Period",
+    "mensual": "Month",
+    "cuatriMensual": "Quarter",
+    "bianual": "Semester",
+    "anual": "Year",
+    "muyBaja": "Very low",
+    "baja": "Low",
+    "media": "Medium",
+    "alta": "High",
+    "muyAlta": "Very high",
+    "addIngreso": "Income",
+    "addGasto": "Expense",
+    "modificarIngreso": "Modify income",
+    "crearNuevoIngreso": "Add new income",
+    "crearNuevoGasto": "Add new expense",
+    "actualizarGasto": "Update expense",
+    "modificarNuevoIngreso": "Modify income",
+    "amountEjemplo": "155.50",
+    "amountObligatorio": "The amount is a mandatory field",
+    "amount": "Amount",
+    "seleccionaPeriodo": "Select period",
+    "periodObligatorio": "The period is a mandatory field",
+    "imprescindible": "Essential",
+    "prescindible": "Disposable",
+    "indicaSiEsImprescindible": "Indicate if it is an essential or disposable expense",
+    "indicaSiEsFijoOVariable": "Indicate if it is a fixed or variable expense",
+    "indicaNivelImportancia": "Indicate the level of importance of the expense",
+    "relevanceObligatorio": "The importance field is mandatory",
+    "seleccionaNivelImportancia": "Select the level of importance",
+    "muyBajo": "Very low",
+    "bajo": "Low",
+    "medio": "Medium",
+    "alto": "High",
+    "muyAlto": "Very high",
+    "modoResumen": "Summary",
+    "addTag": "Add tag",
+    "cambiarOrdenEntradas": "Change order of entries",
+    "viewCategories": "Categories",
+    "viewEtiquetas": "Tags",
+    "sinElementos": "No items",
+    "elementosFiltrados": "Filtered items",
+    "gastos": "Expenses",
+    "ingresos": "Incomes",
+    "viewPeriods": "Periods",
+    "totalIngresos": "Total incomes",
+    "totalGastos": "Total expenses",
+    "utilidad": "Profit",
+    "perdida": "Loss",
+    "estimacion": "Estimate",
+    "usuario": "User",
+    "estimacionesPrincipales": "Main estimates",
+    "estimacionesSecundarias": "Secondary estimates",
+    "cerrarSesion": "Log out"
+}
