--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -38,7 +38,7 @@
     "editarTablero": "Editar tablero",
     "editarCategoria": "Editar categoría",
     "entrar": "Entrar",
-    "misTableros": "Mis tableros",
+    "misTableros": "Boards",
     "seHaCreadoCorrectamenteTablero": "Se ha creado el tablero correctamente",
     "seHaCreadoCorrectamenteCategoria": "Se ha creado la categoría correctamente",
     "seHaCreadoCorrectamenteEntrada": "Se ha creado correctamente la entrada",
@@ -111,5 +111,29 @@
     "totalGastos": "Total gastos",
     "utilidad": "Utilidad",
     "perdida": "Pérdida",
-    "estimacion": "Estimación"
+    "estimacion": "Estimación",
+    "usuario": "Usuario",
+    "estimacionesPrincipales": "Estimaciones principales",
+    "estimacionesSecundarias": "Estimaciones secundarias",
+    "cerrarSesion": "Cerrar sesión",
+    "crearNuevoTemplateBasico": "Crear plantilla básica",
+    "plantillaBasica": "Plantilla básica para gestionar los gastos personales individuales",
+    "crear": "Crear",
+    "plantillasDisponibles": "Plantillas disponibles",
+    "misObjetivos": "Mis objetivos",
+    "seHaCreadoCorrectamenteObjetivo": "El objetivo se ha creado con éxito",
+    "createGoal": "Crear objetivo",
+    "seleccionaBoard": "Selecciona una plantilla",
+    "board": "Plantilla",
+    "crearNuevoObjetivo": "Crear nuevo objetivo",
+    "noTienesNingunObjetivoCreado": "No tienes ningún objetivo creado asociada a esta plantilla",
+    "coste": "Coste",
+    "porcentajeDestinadoAhorro": "Porcentaje de ahorro destinado al objetivo",
+    "laDescripcionEsRequerida": "La descripción es requerida",
+    "indicaImporte": "Indica el importe",
+    "desactivar": "Desactivar",
+    "calcularSimulacion": "Calcular simulación",
+    "costeEsObligatorio": "El importe es obligatorio",
+    "primeroDebesRealizarUnaSimulacion": "Primero debes realizar una simulación",
+    "seguroQueDeseasEliminarGoal": "¿Estás seguro de que deseas eliminar el objetivo seleccionado?"
 }
