--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -136,6 +136,11 @@
     "costeEsObligatorio": "El importe es obligatorio",
     "primeroDebesRealizarUnaSimulacion": "Primero debes realizar una simulación",
     "seguroQueDeseasEliminarGoal": "¿Estás seguro de que deseas eliminar el objetivo seleccionado?",
-    "corregirMes":"Corregir mes",
-    "estasSeguroDeRealizarLaCorreccion":"¿Estás seguro de realizar la corrección del mes?"
+    "corregirMes": "Corregir mes",
+    "estasSeguroDeRealizarLaCorreccion": "¿Estás seguro de realizar la corrección del mes?",
+    "confirmarCorreccion": "Confirmar corrección",
+    "importeFinal": "Importe final",
+    "cancelar": "Cancelar",
+    "rellenaTodosLosCampos": "Rellena todos los campos",
+    "seHaCorregidoElMesCorrectamente": "El mes se ha corregido correctamente"
 }
