feat:simulador deudas

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -142,5 +142,30 @@
     "importeFinal": "Importe final",
     "cancelar": "Cancelar",
     "rellenaTodosLosCampos": "Rellena todos los campos",
-    "seHaCorregidoElMesCorrectamente": "El mes se ha corregido correctamente"
+    "seHaCorregidoElMesCorrectamente": "El mes se ha corregido correctamente",
+    "simuladorInversiones": "Simulador de deudas",
+    "year": "Año",
+    "capitalPendiente": "Capital pendiente",
+    "intereses": "Intereses",
+    "capitalAamortizar": "Capital a amortizar",
+    "cuota": "Cuota",
+    "tipoDeInteres": "Tipo de interés",
+    "simular": "Simular",
+    "realizarSimulacion": "Realizar simulación",
+    "rellenaTodosLosCamposObligatorios": "Rellena todos los campos obligatorios",
+    "noHayDatosParaCargar":"No hay datos para mostrar",
+    "simuladorDeudas": "Simulador deudas",
+    "variables": "Variables",
+    "tipoInteres": "Tipo interés",
+    "plazoEnAños": "Plazo (en años)",
+    "rentabilidadAnual": "Rentabilidad anual",
+    "impuestos": "Impuestos",
+    "ahorroMensual": "Ahorro mensual",
+    "simulador": "Simulador",
+    "ahorro": "Ahorro",
+    "deuda": "Deuda",
+    "grafico": "Gráfico",
+    "verSimulaciones": "Ver simulaciones",
+    "simulacionesRegistradas": "Simulaciones guardadas",
+    "seHaCreadoLaSimulacionConExito": "Se ha creado la simulación con éxito"
 }
