chore:configuración local para equipo docente

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -168,5 +168,6 @@
     "verSimulaciones": "Ver simulaciones",
     "simulacionesRegistradas": "Simulaciones guardadas",
     "seHaCreadoLaSimulacionConExito": "Se ha creado la simulación con éxito",
-    "descargar": "Descargar"
+    "descargar": "Descargar",
+    "crearNuevoTemplateVacaciones": "Crear plantilla vacaciones"
 }
