feat:Actualizo paquete de idioma inglés

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,11 +1,11 @@
 {
     "bienvenido": "Welcome back!",
-    "heOlvidadoContraseña": "I forgot my password",
+    "heOlvidadoContraseña": "I've forgotten my password",
     "eresNuevoAqui": "Are you new here?",
-    "mensajeDeBienvenida": "Welcome to our budget and financial health application! Here you can keep track of your finances and improve your economic situation. Register now and start achieving your financial goals!",
+    "mensajeDeBienvenida": "Welcome to our budget and financial health app! Here you can keep track of your finances and improve your economic situation. Register now and start reaching your financial goals!",
     "registrarse": "Register!",
     "password": "password",
-    "registro": "Registration",
+    "registro": "Register",
     "introduceLosSiguientesDatos": "Enter the following data",
     "elNombreEsObligatorio": "The name is mandatory.",
     "elCorreoElectronicoEsObligatorio": "The email is mandatory.",
@@ -14,7 +14,7 @@
     "laContraseñaDebeTenerAlMenos8Caracteres": "The password must have at least 8 characters.",
     "laContraseñaDebeContenerAlMenosMayusculaYMinuscula": "The password must contain at least one uppercase and one lowercase letter.",
     "confirmacionContraseñaObligatoria": "Password confirmation is mandatory.",
-    "contraseñasNoCoinciden": "Passwords do not match.",
+    "contraseñasNoCoinciden": "The passwords do not match.",
     "añoNacimientoObligatorio": "The birth year is mandatory.",
     "elAñoDebeSerValido": "The birth year must be a valid year.",
     "crearCuenta": "Create account",
@@ -26,35 +26,13 @@
     "descripcion": "Description",
     "crearNuevoTablero": "Create new board",
     "crearNuevaCategoria": "Create new category",
-    "elNombreTieneComoMaximo": "The name must have a maximum of 50 characters",
-    "porcentajeAhorroObligatotorio": "The savings percentage is mandatory",
-    "porcentajeMayorOIgual": "The savings percentage must be greater than or equal to 0",
-    "porcentajeMenorOIgual": "The savings percentage must be less than or equal to 100",
-    "porcentajeAhorro": "Savings percentage",
-    "descripcionMaximoCaracteres": "The description must have a maximum of 250 characters",
-    "createBoard": "Create board",
-    "createCategory": "Add category",
-    "confirmar": "Confirm",
-    "editarTablero": "Edit board",
-    "editarCategoria": "Edit category",
-    "entrar": "Enter",
-    "misTableros": "Mis plantillas",
-    "seHaCreadoCorrectamenteTablero": "The board has been created correctly",
-    "seHaCreadoCorrectamenteCategoria": "The category has been created correctly",
-    "seHaCreadoCorrectamenteEntrada": "The entry has been created correctly",
-    "seHaActualizadoCorrectamenteEntrada": "The entry has been correctly updated",
-    "seHaProducidoUnError": "An error has occurred. Try again later",
-    "cargando": "loading",
-    "quincePorCiento": "15%",
-    "cerrar": "Close",
-    "guardar": "Save",
-    "seguroQueDeseasEliminarBoard": "Are you sure you want to delete the selected",
+    "seguroQueDeseasEliminarBoard": "Are you sure you want to delete the selected board?",
     "seguroQueDeseasEliminarCategoria": "Are you sure you want to delete the selected category?",
-    "seHaEliminadoCorrectamente": "The board has been deleted correctly",
+    "seHaEliminadoCorrectamente": "The board has been deleted successfully",
     "seguroQueDeseasEliminarLaEntrada": "Are you sure you want to delete the selected entry?",
-    "seHaEliminadoCorrectamenteCategoria": "The category has been correctly deleted",
-    "seHaEliminadoCorrectamenteEntrada": "The entry has been deleted correctly",
-    "seHaActualizadoCategoriaCorrectamente": "The category has been updated correctly",
+    "seHaEliminadoCorrectamenteCategoria": "The category has been deleted successfully",
+    "seHaEliminadoCorrectamenteEntrada": "The entry has been deleted successfully",
+    "seHaActualizadoCategoriaCorrectamente": "The category has been updated successfully",
     "buscar": "Search",
     "buscarNav": "Search...",
     "importe": "Amount",
@@ -64,56 +42,52 @@
     "etiquetas": "Tags",
     "importancia": "Importance",
     "periodo": "Period",
-    "mensual": "Month",
-    "cuatriMensual": "Quarter",
-    "bianual": "Semester",
-    "anual": "Year",
+    "mensual": "Monthly",
+    "cuatriMensual": "Quarterly",
+    "bianual": "Biannual",
+    "anual": "Annual",
     "muyBaja": "Very low",
     "baja": "Low",
     "media": "Medium",
     "alta": "High",
     "muyAlta": "Very high",
-    "addIngreso": "Income",
-    "addGasto": "Expense",
+    "addIngreso": "Add income",
+    "addGasto": "Add expense",
     "modificarIngreso": "Modify income",
     "crearNuevoIngreso": "Add new income",
     "crearNuevoGasto": "Add new expense",
     "actualizarGasto": "Update expense",
     "modificarNuevoIngreso": "Modify income",
     "amountEjemplo": "155.50",
-    "amountObligatorio": "The amount is a mandatory field",
+    "amountObligatorio": "Amount is a mandatory field",
     "amount": "Amount",
     "seleccionaPeriodo": "Select period",
-    "periodObligatorio": "The period is a mandatory field",
-    "imprescindible": "Essential",
-    "prescindible": "Disposable",
-    "indicaSiEsImprescindible": "Indicate if it is an essential or disposable expense",
-    "indicaSiEsFijoOVariable": "Indicate if it is a fixed or variable expense",
-    "indicaNivelImportancia": "Indicate the level of importance of the expense",
-    "relevanceObligatorio": "The importance field is mandatory",
-    "seleccionaNivelImportancia": "Select the level of importance",
-    "muyBajo": "Very low",
-    "bajo": "Low",
-    "medio": "Medium",
-    "alto": "High",
-    "muyAlto": "Very high",
-    "modoResumen": "Summary",
-    "addTag": "Add tag",
-    "cambiarOrdenEntradas": "Change order of entries",
-    "viewCategories": "Categories",
-    "viewEtiquetas": "Tags",
-    "sinElementos": "No items",
-    "elementosFiltrados": "Filtered items",
-    "gastos": "Expenses",
-    "ingresos": "Incomes",
-    "viewPeriods": "Periods",
-    "totalIngresos": "Total incomes",
-    "totalGastos": "Total expenses",
-    "utilidad": "Profit",
-    "perdida": "Loss",
-    "estimacion": "Estimate",
-    "usuario": "User",
-    "estimacionesPrincipales": "Main estimates",
-    "estimacionesSecundarias": "Secondary estimates",
-    "cerrarSesion": "Log out"
+    "periodObligatorio": "Period is a mandatory field",
+    "seleccionaTipo": "Select type",
+    "tipoObligatorio": "Type is a mandatory field",
+    "seleccionaImportancia": "Select importance",
+    "importanciaObligatorio": "Importance is a mandatory field",
+    "tags": "Tags",
+    "tagsMaximoCaracteres": "Tags must be a maximum of 100 characters",
+    "notas": "Notes",
+    "notasMaximoCaracteres": "Notes must be a maximum of 250 characters",
+    "guardar": "Save",
+    "actualizar": "Update",
+    "seguroQueDeseasEliminarIngreso": "Are you sure you want to delete this income?",
+    "seguroQueDeseasEliminarGasto": "Are you sure you want to delete this expense?",
+    "seHaEliminadoCorrectamenteIngreso": "Income has been successfully deleted",
+    "seHaEliminadoCorrectamenteGasto": "Expense has been successfully deleted",
+    "seHaActualizadoIngresoCorrectamente": "Income has been successfully updated",
+    "seHaActualizadoGastoCorrectamente": "Expense has been successfully updated",
+    "ingresaATuTablero": "Enter your board",
+    "nombreObligatorio": "Name is a mandatory field",
+    "email": "Email",
+    "emailObligatorio": "Email is a mandatory field",
+    "passwordObligatorio": "Password is a mandatory field",
+    "registroCorrecto": "Successful registration",
+    "crearTablero": "Create board",
+    "crearTableroMensaje": "Start creating your first board and get control of your finances",
+    "crear": "Create",
+    "aunNoTienesCategorias": "You don't have any categories yet",
+    "crearCategoriaMensaje": "Start by creating a category"
 }
