--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -118,6 +118,7 @@
     "cerrarSesion": "Cerrar sesión",
     "crearNuevoTemplateBasico": "Crear plantilla básica",
     "plantillaBasica": "Plantilla básica para gestionar los gastos personales individuales",
+    "plantillaBasicaVacaciones": "Plantilla para presupuesto de vacaciones",
     "crear": "Crear",
     "plantillasDisponibles": "Plantillas disponibles",
     "misObjetivos": "Mis objetivos",
