--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,93 +1,184 @@
 {
-    "bienvenido": "Welcome back!",
-    "heOlvidadoContraseña": "I've forgotten my password",
-    "eresNuevoAqui": "Are you new here?",
-    "mensajeDeBienvenida": "Welcome to our budget and financial health app! Here you can keep track of your finances and improve your economic situation. Register now and start reaching your financial goals!",
-    "registrarse": "Register!",
-    "password": "password",
-    "registro": "Register",
-    "introduceLosSiguientesDatos": "Enter the following data",
-    "elNombreEsObligatorio": "The name is mandatory.",
-    "elCorreoElectronicoEsObligatorio": "The email is mandatory.",
-    "elCorreoElectronicoNoEsValido": "The email is not valid.",
-    "laContraseñaEsObligatoria": "The password is mandatory.",
-    "laContraseñaDebeTenerAlMenos8Caracteres": "The password must have at least 8 characters.",
-    "laContraseñaDebeContenerAlMenosMayusculaYMinuscula": "The password must contain at least one uppercase and one lowercase letter.",
-    "confirmacionContraseñaObligatoria": "Password confirmation is mandatory.",
-    "contraseñasNoCoinciden": "The passwords do not match.",
-    "añoNacimientoObligatorio": "The birth year is mandatory.",
-    "elAñoDebeSerValido": "The birth year must be a valid year.",
-    "crearCuenta": "Create account",
-    "nombre": "Name",
-    "correoElectronico": "Email",
-    "contraseña": "Password",
-    "confirmarContraseña": "Confirm password",
-    "añoNacimiento": "Birth year",
-    "descripcion": "Description",
-    "crearNuevoTablero": "Create new board",
-    "crearNuevaCategoria": "Create new category",
-    "seguroQueDeseasEliminarBoard": "Are you sure you want to delete the selected board?",
-    "seguroQueDeseasEliminarCategoria": "Are you sure you want to delete the selected category?",
-    "seHaEliminadoCorrectamente": "The board has been deleted successfully",
-    "seguroQueDeseasEliminarLaEntrada": "Are you sure you want to delete the selected entry?",
-    "seHaEliminadoCorrectamenteCategoria": "The category has been deleted successfully",
-    "seHaEliminadoCorrectamenteEntrada": "The entry has been deleted successfully",
-    "seHaActualizadoCategoriaCorrectamente": "The category has been updated successfully",
-    "buscar": "Search",
-    "buscarNav": "Search...",
-    "importe": "Amount",
-    "tipo": "Type",
-    "fijo": "Fixed",
-    "variable": "Variable",
-    "etiquetas": "Tags",
-    "importancia": "Importance",
-    "periodo": "Period",
-    "mensual": "Monthly",
-    "cuatriMensual": "Quarterly",
-    "bianual": "Biannual",
-    "anual": "Annual",
-    "muyBaja": "Very low",
-    "baja": "Low",
-    "media": "Medium",
-    "alta": "High",
-    "muyAlta": "Very high",
-    "addIngreso": "Add income",
-    "addGasto": "Add expense",
-    "modificarIngreso": "Modify income",
-    "crearNuevoIngreso": "Add new income",
-    "crearNuevoGasto": "Add new expense",
-    "actualizarGasto": "Update expense",
-    "modificarNuevoIngreso": "Modify income",
-    "amountEjemplo": "155.50",
-    "amountObligatorio": "Amount is a mandatory field",
-    "amount": "Amount",
-    "seleccionaPeriodo": "Select period",
-    "periodObligatorio": "Period is a mandatory field",
-    "seleccionaTipo": "Select type",
-    "tipoObligatorio": "Type is a mandatory field",
-    "seleccionaImportancia": "Select importance",
-    "importanciaObligatorio": "Importance is a mandatory field",
-    "tags": "Tags",
-    "tagsMaximoCaracteres": "Tags must be a maximum of 100 characters",
-    "notas": "Notes",
-    "notasMaximoCaracteres": "Notes must be a maximum of 250 characters",
-    "guardar": "Save",
-    "actualizar": "Update",
-    "seguroQueDeseasEliminarIngreso": "Are you sure you want to delete this income?",
-    "seguroQueDeseasEliminarGasto": "Are you sure you want to delete this expense?",
-    "seHaEliminadoCorrectamenteIngreso": "Income has been successfully deleted",
-    "seHaEliminadoCorrectamenteGasto": "Expense has been successfully deleted",
-    "seHaActualizadoIngresoCorrectamente": "Income has been successfully updated",
-    "seHaActualizadoGastoCorrectamente": "Expense has been successfully updated",
-    "ingresaATuTablero": "Enter your board",
-    "nombreObligatorio": "Name is a mandatory field",
-    "email": "Email",
-    "emailObligatorio": "Email is a mandatory field",
-    "passwordObligatorio": "Password is a mandatory field",
-    "registroCorrecto": "Successful registration",
-    "crearTablero": "Create board",
-    "crearTableroMensaje": "Start creating your first board and get control of your finances",
-    "crear": "Create",
-    "aunNoTienesCategorias": "You don't have any categories yet",
-    "crearCategoriaMensaje": "Start by creating a category"
+  "bienvenido": "Welcome back!",
+  "heOlvidadoContraseña": "I have forgotten my password",
+  "eresNuevoAqui": "Are you new here?",
+  "mensajeDeBienvenida": "Welcome to our budgeting and financial health application! Here you can keep track of your finances and improve your economic situation. Sign up now and start reaching your financial goals!",
+  "registrarse": "Sign up!",
+  "password": "password",
+  "registro": "Registration",
+  "introduceLosSiguientesDatos": "Enter the following data",
+  "elNombreEsObligatorio": "The name is mandatory.",
+  "elCorreoElectronicoEsObligatorio": "Email is mandatory.",
+  "elCorreoElectronicoNoEsValido": "The email is not valid.",
+  "laContraseñaEsObligatoria": "The password is mandatory.",
+  "laContraseñaDebeTenerAlMenos8Caracteres": "The password must be at least 8 characters long.",
+  "laContraseñaDebeContenerAlMenosMayusculaYMinuscula": "The password must contain at least one uppercase and one lowercase letter.",
+  "confirmacionContraseñaObligatoria": "Password confirmation is mandatory.",
+  "contraseñasNoCoinciden": "Passwords do not match.",
+  "añoNacimientoObligatorio": "Year of birth is mandatory.",
+  "elAñoDebeSerValido": "The year of birth must be a valid year.",
+  "crearCuenta": "Create account",
+  "nombre": "Name",
+  "correoElectronico": "Email",
+  "contraseña": "Password",
+  "confirmarContraseña": "Confirm password",
+  "añoNacimiento": "Year of birth",
+  "descripcion": "Description",
+  "crearNuevoTablero": "Create new board",
+  "crearNuevaCategoria": "Create new category",
+  "elNombreTieneComoMaximo": "The name must have a maximum of 50 characters",
+  "porcentajeAhorroObligatotorio": "The savings percentage is mandatory",
+  "porcentajeMayorOIgual": "The savings percentage must be greater than or equal to 0",
+  "porcentajeMenorOIgual": "The savings percentage must be less than or equal to 100",
+  "porcentajeAhorro": "Savings percentage",
+  "descripcionMaximoCaracteres": "The description must have a maximum of 250 characters",
+  "createBoard": "Create board",
+  "createCategory": "Add category",
+  "confirmar": "Confirm",
+  "editarTablero": "Edit board",
+  "editarCategoria": "Edit category",
+  "entrar": "Log in",
+  "misTableros": "My boards",
+  "seHaCreadoCorrectamenteTablero": "The board has been created successfully",
+  "seHaCreadoCorrectamenteCategoria": "The category has been created successfully",
+  "seHaCreadoCorrectamenteEntrada": "The entry has been created successfully",
+  "seHaActualizadoCorrectamenteEntrada": "The entry has been updated successfully",
+  "seHaProducidoUnError": "An error has occurred. Please try again later",
+  "cargando": "Loading",
+  "quincePorCiento": "15%",
+  "cerrar": "Close",
+  "guardar": "Save",
+  "seguroQueDeseasEliminarBoard": "Are you sure you want to delete the selected board?",
+"seguroQueDeseasEliminarCategoria": "Are you sure you want to delete the selected category?",
+"seHaEliminadoCorrectamente": "The board has been deleted successfully",
+"seguroQueDeseasEliminarLaEntrada": "Are you sure you want to delete the selected entry?",
+"seHaEliminadoCorrectamenteCategoria": "The category has been deleted successfully",
+"seHaEliminadoCorrectamenteEntrada": "The entry has been deleted successfully",
+"seHaActualizadoCategoriaCorrectamente": "The category has been updated successfully",
+"buscar": "Search",
+"buscarNav": "Search...",
+"importe": "Amount",
+"tipo": "Type",
+"fijo": "Fixed",
+"variable": "Variable",
+"etiquetas": "Labels",
+"importancia": "Importance",
+"periodo": "Period",
+"mensual": "Month",
+"cuatriMensual": "Quarter",
+"bianual": "Semester",
+"anual": "Year",
+"muyBaja": "Very low",
+"baja": "Low",
+"media": "Medium",
+"alta": "High",
+"muyAlta": "Very high",
+"addIngreso": "Income",
+"addGasto": "Expense",
+"modificarIngreso": "Modify income",
+"crearNuevoIngreso": "Add new income",
+"crearNuevoGasto": "Add new expense",
+"actualizarGasto": "Update expense",
+"modificarNuevoIngreso": "Modify income",
+"amountEjemplo": "155.50",
+"amountObligatorio": "Amount is a required field",
+"amount": "Amount",
+"seleccionaPeriodo": "Select period",
+"periodObligatorio": "The period is a required field",
+"imprescindible": "Essential",
+"prescindible": "Nonessential",
+"indicaSiEsImprescindible": "Indicate if it is an essential or nonessential expense",
+"indicaSiEsFijoOVariable": "Indicate if it is a fixed or variable expense",
+"indicaNivelImportancia": "Indicate the importance level of the expense",
+"relevanceObligatorio": "Importance field is required",
+"seleccionaNivelImportancia": "Select the importance level",
+"muyBajo": "Very low",
+"bajo": "Low",
+"medio": "Medium",
+"alto": "High",
+"muyAlto": "Very high",
+"modoResumen": "Summary",
+"addTag": "Add tag",
+"cambiarOrdenEntradas": "Change the order of the entries",
+"viewCategories": "Categories",
+"viewEtiquetas": "Tags",
+"sinElementos": "No elements",
+"elementosFiltrados": "Filtered elements",
+"gastos": "Expenses",
+"ingresos": "Income",
+"viewPeriods": "Periods",
+"totalIngresos": "Total income",
+"totalGastos": "Total expenses",
+"utilidad": "Profit",
+"perdida": "Loss",
+"estimacion": "Estimate",
+"usuario": "User",
+  "estimacionesPrincipales": "Main estimates",
+"estimacionesSecundarias": "Secondary estimates",
+"cerrarSesion": "Log out",
+"crearNuevoTemplateBasico": "Create basic template",
+"plantillaBasica": "Basic template for managing individual personal expenses",
+"plantillaBasicaVacaciones": "Template for vacation budget",
+"crear": "Create",
+"plantillasDisponibles": "Available templates",
+"misObjetivos": "My goals",
+"seHaCreadoCorrectamenteObjetivo": "The goal has been successfully created",
+"createGoal": "Create goal",
+"seleccionaBoard": "Select a template",
+"board": "Template",
+"crearNuevoObjetivo": "Create new goal",
+"noTienesNingunObjetivoCreado": "You have no goal created associated with this template",
+"coste": "Cost",
+"porcentajeDestinadoAhorro": "Percentage of savings allocated to the goal",
+"laDescripcionEsRequerida": "Description is required",
+"indicaImporte": "Indicate the amount",
+"desactivar": "Deactivate",
+"calcularSimulacion": "Calculate simulation",
+"costeEsObligatorio": "The amount is mandatory",
+"primeroDebesRealizarUnaSimulacion": "First, you must perform a simulation",
+"seguroQueDeseasEliminarGoal": "Are you sure you want to delete the selected goal?",
+"corregirMes": "Correct month",
+"estasSeguroDeRealizarLaCorreccion": "Are you sure you want to correct the month?",
+"confirmarCorreccion": "Confirm correction",
+"importeFinal": "Final amount",
+"cancelar": "Cancel",
+"rellenaTodosLosCampos": "Fill in all the fields",
+"seHaCorregidoElMesCorrectamente": "The month has been corrected correctly",
+"simuladorInversiones": "Debt simulator",
+"year": "Year",
+"capitalPendiente": "Pending capital",
+"intereses": "Interests",
+"capitalAamortizar": "Capital to amortize",
+"cuota": "Fee",
+"tipoDeInteres": "Interest rate",
+"simular": "Simulate",
+"realizarSimulacion": "Perform simulation",
+"rellenaTodosLosCamposObligatorios": "Fill in all mandatory fields",
+"noHayDatosParaCargar": "There are no data to display",
+"simuladorDeudas": "Debt simulator",
+"variables": "Variables",
+"tipoInteres": "Interest type",
+"plazoEnAños": "Term (in years)",
+"rentabilidadAnual": "Annual return",
+"impuestos": "Taxes",
+"ahorroMensual": "Monthly savings",
+"simulador": "Simulator",
+"ahorro": "Saving",
+"deuda": "Debt",
+"grafico": "Graph",
+"verSimulaciones": "See simulations",
+"simulacionesRegistradas": "Saved simulations",
+"seHaCreadoLaSimulacionConExito": "The simulation has been created successfully",
+"descargar": "Download",
+"crearNuevoTemplateVacaciones": "Create holiday template",
+"notaFinanciera": "Financial note",
+"calcularNota": "Calculate note",
+"seHaCalculadoLaNotaFinanciera": "The financial note has been correctly calculated",
+"edad": "Age",
+"richness": "Wealth",
+  "richnessSignificado": "set of financial assets and material goods that a person owns, which may include properties, investments, stocks, bonds, cash savings, among others.",
+    "calcularNotaFinanciera": "Calculate financial grade",
+    "percentageMonthlyInvestment": "Percentage of monthly income allocated to investment",
+    "savingPercentage": "Percentage of monthly income allocated to savings",
+    "passive": "Total amount of debt money"
 }
